sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:13: error: identifier expected but 'while' found.
    while (it+gap<n){
    ^